--- a/settings.json
+++ b/settings.json
@@ -5,9 +5,10 @@
             "cselimit2": 60,
             "ijkingstoets_juli" : true,
             "ijkingstoets_september" : true,
-            "showJuni": true,
-            "showSeptember" :true,
-            "dynamic": true
+            "showJuni": false,
+            "showSeptember" :false,
+            "dynamic": false,
+            "logging": false
         }
 
 }
