--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "babel-runtime": "^6.25.0",
     "catty": "0.0.7",
-    "meteor-node-stubs": "^0.2.3"
+    "meteor-node-stubs": "^0.2.3",
+    "nouislider": "^10.1.0"
   }
 }
