--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "catty": "0.0.7",
     "lodash": "^4.17.4",
     "meteor-node-stubs": "^0.2.11",
-    "nouislider": "^10.1.0"
+    "nouislider": "^10.1.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
   }
 }
