--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "@babel/runtime": "^7.0.0-beta.51",
     "babel-runtime": "^6.26.0",
+    "bcrypt": "^2.0.1",
     "catty": "0.0.7",
     "lodash": "^4.17.4",
     "meteor-node-stubs": "^0.2.11",
-    "nouislider": "^10.1.0"
+    "nouislider": "^11.1.0"
   }
 }
