--- a/settings.json
+++ b/settings.json
@@ -5,7 +5,7 @@
     "ijkingstoets_september" : true,
     "showJuni": false,
     "showSeptember" :false,
-    "dynamic": false,
+    "dynamic": true,
     "logging": false
   }
 }
